<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">MiXiT 2017</string>

    <string name="title_section_home" translatable="false">MiXiT 2017</string>
    <string name="title_section_planning" translatable="false">Planning</string>
    <string name="title_section_fildeleau">Le fil de l\'eau</string>
    <string name="title_section_talk" translatable="false">Talks</string>
    <string name="title_section_workshop">Ateliers</string>
    <string name="title_section_lightningtalks" translatable="false">Lightning talks</string>
    <string name="title_section_favoris">Favoris</string>
    <string name="title_section_speaker" translatable="false">Speakers</string>
    <string name="title_section_sponsor" translatable="false">Sponsor</string>
    <string name="title_section_staff" translatable="false">Staff</string>
    <string name="title_section_members">Membres</string>

    <!-- Titles -->
    <string name="title_speaker" translatable="false">Speakers</string>
    <string name="title_members">Membres</string>
    <string name="title_fildeleau">Planning</string>
    <string name="title_staff" translatable="false">Staffs</string>
    <string name="title_sponsor" translatable="false">Sponsors</string>
    <string name="title_talks" translatable="false">Talks</string>
    <string name="title_workshops">Ateliers</string>
    <string name="title_lightningtalks" translatable="false">Lightning talks</string>
    <string name="title_favorites">Favoris</string>
    <string name="title_detail_speaker" translatable="false">Speaker</string>
    <string name="title_detail_members">Membre</string>
    <string name="title_detail_staff" translatable="false">Staff</string>
    <string name="title_detail_sponsor" translatable="false">Sponsor</string>
    <string name="title_detail_talks" translatable="false">Talk</string>
    <string name="title_detail_workshops">Atelier</string>
    <string name="title_detail_lightningtalks" translatable="false">Lightning talk</string>
    <string name="title_detail_favorites">Favori</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_example" translatable="false">Example action</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="blank" translatable="false"> </string>
    <string name="onload">Téléchargement en cours.</string>
    <string name="welcome">La conférence Lyonnaise avec des crêpes et du cœur</string>
    <string name="about">A propos</string>
    <string name="search_hint">texte</string>
    <string name="mixit_url" translatable="false">https://mixitconf.org/come</string>
    <string name="hastag" translatable="false">#mixit17</string>
    <!-- Compteur -->
    <string name="whats_on_countdown_title_0">Plus que </string>
    <plurals name="whats_on_countdown_title">
        <item quantity="one"><xliff:g id="number_of_days">%1$s</xliff:g> jours, <xliff:g id="remaining_time">%2$s</xliff:g>\navant de nous retrouver à MiXiT</item>
        <item quantity="other"><xliff:g id="number_of_days">%1$s</xliff:g> jours, <xliff:g id="remaining_time">%2$s</xliff:g>\navant de nous retrouver à MiXiT</item>
    </plurals>
    <string name="whats_on_thank_you_title">A l\'année prochaine!</string>


    <!-- Import favoris -->
    <string name="description_link_user">Lié ce compte à l\'application. Le fait de vous lier à votre compte supprimera tous les favoris déjà définis</string>
    <string name="description_link_user_confirm">Le lien permet de récupérer vos favoris sur le site de MiXiT. Par contre la synchronisation des liens ne se fait que dans un sens (du site vers l\'application) car le site MiXiT ne permet pas de les mettre à jour. </string>
    <string name="description_link_user_error">Aucun compte MiXiT n\'est lié à l\'application. Vous devez aller sur votre profil dans la liste des membres et cliquez sur le bouton lien dans la barre de bouton</string>

    <!-- Menu -->
    <string name="description_refresh">Rafraîchir</string>
    <string name="description_compose_twitter" translatable="false">Tweet</string>
    <string name="description_compose_google">Message Google+</string>
    <string name="description_no_twitter">Installez au préalable l\'application Twitter</string>
    <string name="description_no_google">Installez au préalable l\'application Google+</string>
    <string name="description_planning" translatable="false">Planning</string>

    <string name="description_sync_speaker">Raffraîchir données Speakers</string>
    <string name="description_sync_favorites">Raffraîchir vos favoris</string>
    <string name="description_sync_talk">Recharger données du serveur MiXiT</string>
    <string name="description_sync_membre">Raffraîchir données Membres</string>
    <string name="description_search">Rechercher</string>
    <string name="description_favorite_add">Mettre en favori</string>
    <string name="description_favorite_del">Enlever des favoris</string>
    <string name="description_favorite">Favoris</string>
    <string name="description_sessions" translatable="false">Sessions</string>
    <string name="description_talk">Conférences</string>
    <string name="description_workshop">Ateliers</string>
    <string name="description_ligtningtalk" translatable="false">Lightning Talk</string>
    <string name="description_people" translatable="false">People</string>
    <string name="description_track" translatable="false">Track</string>
    <string name="description_speakers" translatable="false">Speakers</string>
    <string name="description_staff" translatable="false">Staffs</string>
    <string name="description_membres">Membres</string>
    <string name="description_sponsor" translatable="false">Sponsors</string>
    <string name="description_map">Conférence</string>
    <string name="description_map2">Soirée</string>
    <string name="description_venir">Comment venir</string>
    <string name="description_howtocome">Cliquez sur l\'une des deux cartes pour naviguer vers le lieu de a conférence ou vers le lieu de la soirée</string>
    <string name="description_venir_mixit">Comment venir à MiXiT</string>
    <string name="description_plusinfo">Plus dinformations</string>
    <string name="description_liens">Liens</string>
    <string name="description_interet">Intérêts</string>
    <string name="description_niveau">Niveau</string>
    <string name="description_votant">Nb votants</string>

    <!-- Calendrier -->
    <string name="calendrier_planning">De %1$s à %2$s</string>
    <string name="calendrier_planninga">à %1$s</string>
    <string name="calendrier_detail">détail</string>
    <string name="calendrier_confs">Talks</string>
    <string name="calendrier_ateliers">Ateliers</string>
    <string name="calendrier_conf">Conférence</string>
    <string name="calendrier_conf_small">Talk</string>
    <string name="calendrier_atelier">Atelier</string>
    <string name="calendrier_accueil">Accueil</string>
    <string name="calendrier_accueillg">Accueil et petit déjeuner</string>
    <string name="calendrier_orga" translatable="false">Mot de l\'orga,  pres. sess. AM</string>
    <string name="calendrier_orgalg">Le mot de l\'orga et prés. des sessions AM</string>
    <string name="calendrier_presses">Pres. sessions PM</string>
    <string name="calendrier_presseslg">Presentation des sessions PM </string>
    <string name="calendrier_ligthning" translatable="false">Ligthning Talks</string>
    <string name="calendrier_random" translatable="false">Random</string>
    <string name="calendrier_ligthning_small" translatable="false">Ligh.Talk</string>
    <string name="calendrier_keynote" translatable="false">Keynote</string>
    <string name="calendrier_cloture">Clôture des organisateurs</string>
    <string name="calendrier_pause">Pause</string>
    <string name="calendrier_secret" translatable="false">Secret slot</string>
    <string name="calendrier_partie" translatable="false">Mixit Party</string>

    <string name="calendrier_repas">Repas</string>
    <string name="calendrier_jour1">Jeudi 20 avril</string>
    <string name="calendrier_jour2">Vendredi 21 avril</string>
    <string name="calendrier_stream" translatable="false">Fil</string>

    <string name="calendrier_explication"> </string>
    <string name="calendrier_legende">(T) conférence, (W) atelier, (K) keynote, (L) lightning talk</string>
    <string name="calendrier_salle_liste">Liste des salles</string>
    <string name="calendrier_avril">Avril</string>
    <string name="calendrier_jeudi" translatable="false">Mar</string>
    <string name="calendrier_vendredi" translatable="false">Mer</string>
    <string name="calendrier_24" translatable="false">16</string>
    <string name="calendrier_25">17\n8H30 19H00\ndétail </string>
    <string name="calendrier_26">17\n8H30 18H00\ndétail </string>
    <string name="calendrier_27" translatable="false"> </string>
    <!-- Dates -->
    <string name="jour">jour</string>
    <string name="jours">jours</string>
    <string name="minutes" translatable="false">minutes</string>
    <string name="minute" translatable="false">minute</string>
    <string name="heures">heures</string>
    <string name="heure">heure</string>
    <string name="periode" translatable="false">%1$s de %2$s à %3$s</string>
    <string name="pasdate">Heure non définie</string>
    <string name="Salle">%s</string>




    <!-- About -->
    <string name="about_titre">A propos</string>
    <string name="about_h1" translatable="false">MiXiT 2017 Client</string>
    <string name="about_cree" translatable="false">Created by Guillaume EHRET</string>
    <string name="about_createur" translatable="false">https://twitter.com/guillaumeehret</string>
    <string name="about_blog" translatable="false">https://www.dev-mind.fr/</string>
    <string name="about_blogurl" translatable="false">http://javamind-fr.blogspot.fr/</string>
    <string name="about_help">Si vous rencontrez des problèmes pour afficher les informations cliquez sur le bouton RAZ pour supprimer les fichiers téléchargés et revenir dans la configuration d\'origine</string>

    <!-- Synchronize -->
    <string name="sync_erreur">Impossible de charger les données su site MiXiT : le stockage est inaccessible</string>
    <string name="sync_erreur_reseau">Impossible de charger les données su site MiXiT : réseau inaccessible</string>
    <string name="sync_message_title" translatable="false">Synchronisation</string>
    <string name="sync_message">Lancement de la récupération des données MiXiT</string>
    <string name="sync_progress" translatable="false">Progression de la tâche asynchrone:</string>

    <!--Dialogue-->
    <string name="dial_OK" translatable="false">OK</string>
    <string name="dial_oui">Oui</string>
    <string name="dial_non">Non</string>
    <string name="dial_cancel">Annuler</string>
    <string name="dial_raz">Remise à zéro</string>
    <string name="dial_message_talk">Le chargement récupère les données sur les ateliers, lightning talks, les conférences et les speakers</string>
    <string name="dial_message">Le chargement récupère les données et les images et peut être plus ou moins long. Une fois lancée la tâche s\'exécutera jusqu\'à la fin
        même si la fenêtre d\'avancement est masquée</string>
    <string name="dial_message_membre">Le chargement récupère les données et les images et peut être plus ou moins long. Une fois lancée la tâche s\'exécutera jusqu\'à la fin
        même si la fenêtre d\'avancement est masquée</string>

</resources>
