<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2015 Guillaume EHRET

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:scrollbars="vertical"
              android:background="@color/white">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color_primary"
            android:padding="5dp">


        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingTop="10dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/textView"/>
        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:contentDescription="@string/app_name"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:src="@drawable/logomixit"/>

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/heart"/>
    </LinearLayout>

    <TextView
            android:id="@+id/whats_on"
            style="@style/WhatsOnStaticItem"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="5dp">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingLeft="2dp"
                style="@style/myCalendarTitle"
                android:text="@string/description_venir"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_howtocome"
                android:id="@+id/home.howtocome"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"

        >
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:background="@drawable/mapmenu_background"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:foregroundGravity="fill"
                    android:layout_weight="1"
            >
                <ImageView android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:src="@drawable/map_background"
                           android:scaleType="centerCrop"
                           android:contentDescription="@string/description_map"/>
                <TextView android:id="@+id/mapTextView"
                          android:textStyle="bold"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_gravity="center"
                          android:textAlignment="center"
                          android:padding="10dp"
                          style="@style/myTextView"
                          android:text="@string/description_map"/>

            </FrameLayout>
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:background="@drawable/mapmenu_background"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:foregroundGravity="fill"
                    android:layout_weight="1"
            >
                <ImageView android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:src="@drawable/map_background"
                           android:scaleType="centerCrop"
                           android:contentDescription="@string/description_map"/>
                <TextView android:id="@+id/mapTextView2"
                          android:textStyle="bold"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_gravity="center"
                          android:textAlignment="center"
                          android:padding="10dp"
                          style="@style/myTextView"
                          android:text="@string/description_map2"/>

            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/mapmenu_background"
                      android:orientation="vertical"

        >

            <TextView android:id="@+id/mapDescriptifTextView"
                      android:textStyle="bold"
                      android:text="@string/description_plusinfo"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_vertical"
                      android:layout_gravity="center"
                      android:textAppearance="?android:attr/textAppearanceSmall"
            />
            <TextView android:id="@+id/mapDescriptifTextView2"
                      android:text="@string/mixit_url"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_vertical"
                      android:autoLink="web"
                      android:textColorLink="@color/color_primary"
                      android:layout_gravity="center"
                      style="@style/myTextView"
                      android:textAppearance="?android:attr/textAppearanceSmall"
            />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>