<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2015 Guillaume EHRET

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:padding="2dp"
    android:id="@+id/item_planning"
    android:scrollbars="vertical">
    <!-- Ecran partage a la calendar : une partie agenda, une zone track et une speaker-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <GridLayout
                android:id="@+id/planningGrid"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"></GridLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="5dp"
            android:scrollbars="vertical">

            <TextView
                style="@style/myTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calendrier_explication" />

            <TableLayout
                android:id="@+id/planningHoraireTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TableLayout>

            <TextView
                style="@style/myTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/calendrier_legende"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/blank" />

            <TextView
                style="@style/myTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calendrier_salle_liste" />

            <TableLayout
                android:id="@+id/salleTableLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"></TableLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

