<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2015 Guillaume EHRET

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="2dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/person_fragments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <ImageView
                android:id="@+id/membre_image"
                android:layout_width="@dimen/speaker_image_size_big"
                android:layout_height="@dimen/speaker_image_size_big"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/speaker_image_padding"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/membre_user_name"
                style="@style/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_toRightOf="@id/membre_image"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/membre_entreprise"
                style="@style/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/membre_user_name"
                android:layout_toRightOf="@id/membre_image"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/membre_shortdesciptif"
                style="@style/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/membre_entreprise"
                android:paddingTop="8dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <TextView
                android:id="@+id/membre_desciptif"
                style="@style/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/membre_shortdesciptif"
/>
        </RelativeLayout>


        <TextView
            style="@style/myCalendarTitleh2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="@string/description_sessions"
            android:id="@+id/titleSessions"
            android:textStyle="bold" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/personSessionFragment"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="5dp"
            android:scrollbars="vertical"></LinearLayout>


        <TextView
            style="@style/myCalendarTitleh2"
            android:id="@+id/titleLinks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingTop="8dp"
            android:text="@string/description_liens"
            android:textStyle="bold" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/personLinkFragment"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="5dp"
            android:scrollbars="vertical"></LinearLayout>


        <TextView
            style="@style/myCalendarTitleh2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingTop="8dp"
            android:text="@string/description_interet"
            android:id="@+id/titleInterets"
            android:textStyle="bold" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/personInteretFragment"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="5dp"
            android:scrollbars="vertical"></LinearLayout>


        <ImageView
            android:id="@+id/membre_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_below="@id/personInteretFragment"
            android:layout_marginRight="@dimen/speaker_image_padding"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:scaleType="fitCenter" />
    </LinearLayout>
</ScrollView>